--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
